Fix #170: [CSS] Overflow on very tiny viewport.

--- a/stylesheets/site/_home.scss
+++ b/stylesheets/site/_home.scss
@@ -342,7 +342,8 @@
   form {
     .form-group {
       #newsletter-email {
-        min-width: 20rem;
+        width: 20rem;
+        max-width: 100%;
         margin-right: 1rem;
       }
       #newsletter-submit {
